--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -1,6 +1,8 @@
 .hero {
 	height: 100vh;
+  position: relative;
 	z-index: 0;
+  
 	.bldy_bg {
 		position: fixed;
     z-index: 1;
